Final version - completed all changes suggested by Dr.Pizer

--- a/comp992/paper/comp992.tex
+++ b/comp992/paper/comp992.tex
@@ -139,29 +139,35 @@ The above formulation is designed to highlight crossing fiber landmarks (see Fig
 %
 %We also explored other features such as Earth Mover's Distance of the Fiber distance histogram between normal control and krabbe cases in hope of obtaining a pathology invariant feature map. The fiber distance was defined as the spherical distance between weighted individual fiber orientation to strongest fiber orientation at a particular voxel. However, the results produced were inconclusive and hence, we decided to not include it in the feature map.
 
-%\subsection{Landmarks with correspondence on feature maps}
-%\label{subsec:Correspondence}
-%Deformable intensity-based image registration methods employ local optimization methods that are largely driven by distinctive image structure, i.e., corners or landmarks, and must be correctly initialized in order to ensure convergence to correct solutions. Here, we achieve initialization from a set of robust image-to-image correspondences obtained via a 3D version of the scale-invariant feature transform (SIFT) matching technique of Lowe et al~\cite{Lowe:04}. The SIFT technique operates by identifying maxima in a difference-of-Gaussian (DoG) operator:
-%\begin{equation}
-% \{x,y,z,\sigma\} = \underset{x,y,z,\sigma}{\mbox{local argmax}}\left\{|G(x,y,z,\sigma)-G(x,y,z,\kappa\sigma)|\right\},
-%\end{equation}
-%
-%where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of variance $\sigma^2$ and $\kappa$ is a constant. Image regions centered on $x,y,z$ of size proportional to $\sigma$ are then cropped and spatially normalized via rescaling and reorientation to a local coordinate system~\cite{Allaire:08}, and encoded as an appearance descriptor. Image-to-image matching proceeds by computing nearest neighbors between features extracted in different images, based on the Euclidean distances of appearance descriptors. Note that due to spatial feature normalization, nearest neighbors can be computed despite arbitrary global similarity image transforms (i.e. translation, rotation and isotropic scaling). Finally, the Hough transform is applied to determine a set of correspondences that are inliers of a robust image-to-image similarity transform.
-
 \subsection{Landmarks with correspondence on feature maps}
 \label{subsec:Correspondence}
-Deformable intensity-based image registration methods employ local optimization methods that are largely driven by distinctive image structure, i.e., corners or landmarks, and must be correctly initialized in order to ensure convergence to correct solutions. Here, we achieve initialization from a set of robust image-to-image correspondences obtained via a 3D version of the scale-invariant feature transform (SIFT) matching technique of Lowe et al~\cite{Lowe:04}. The first stage of this technique is scale-space extrema detection. This stage of computation identifies locations that are invariant to scale change of the image by searching for stable features across all possible scales, using a continuous function of scale known as scale space. The scale space of an image is defined as the function, \textit{L(x, y, z, $\sigma$)}, that is produced from the convolution of a variable-scale Gaussian, \textit{G(x, y, z, $\sigma$)}, with an input image, \textit{I(x, y, z)} as below:
+Deformable intensity-based image registration methods employ local optimization methods that are largely driven by distinctive image structure, e.g., corners or landmarks, and must be correctly initialized in order to ensure convergence to correct solutions. Here, we achieve initialization from a set of robust image-to-image correspondences obtained via a 3D version of the scale-invariant feature transform (SIFT) matching technique of Lowe et al~\cite{Lowe:04}. The first stage of this technique is scale-space extrema detection which identifies locations that are invariant to scale change of the image by searching for stable features across all possible scales, using a continuous function of scale known as scale space. The scale space of an image is defined as the function, \textit{L(x, y, z, $\sigma$)}, that is produced from the convolution of a variable-scale Gaussian, \textit{G(x, y, z, $\sigma$)}, with an input image, \textit{I(x, y, z)} as below:
 \begin{equation}
     L(x, y, z, \sigma) = G(x, y, z, \sigma) * I(x, y, z),
 \end{equation}
 
-In order to efficiently detect stable keypoint locations in space, Lowe et al \cite{Lowe:04} propose a difference-of-Gaussian function convolved with the image, \textit{D(x, y, z, $\sigma$)}, which can be computed from the difference of two nearby scales separated by a constant multiplicative factor \textit{k}:
+In order to detect stable keypoint locations in space, Lowe et al \cite{Lowe:04} propose a difference-of-Gaussian function convolved with the image, \textit{D(x, y, z, $\sigma$)}, which can be computed from the difference of two nearby scales separated by a constant multiplicative factor \textit{k}:
 \begin{align}
 %   D(x,y,z,\sigma) = \underset{x,y,z,\sigma}{\mbox{local argmax}}\left\{|G(x,y,z,\sigma)-G(x,y,z,\kappa\sigma)|\right\},
     D(x,y,z,\sigma) &= (G(x,y,z,k\sigma) - G(x,y,z,\sigma)) * I(x,y,z) \\
                     &= L(x, y, z, k\sigma) - L(x, y, z, \sigma) \nonumber
 \end{align}
-where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of variance $\sigma^2$ and \textit{k} is a constant. In order to detect local maxima and minima of \textit{D(x, y, z, $\sigma$)}, each sample point is compared to its eight neighbors in the current image and nine neighbors in the scale above and below. It is selected only if it is larger than all of these neighbors or smaller than all of them. Once a keypoint candidate has been found by comparing a pixel to its neighbors, the next step is to perform a detailed fit to the nearby data for location, scale, and ratio of principal curvatures. This information allows points to be rejected that have low contrast (and are therefore sensitive to noise) or are poorly localized along an edge. Each keypoint is also assigned a consistent orientation \cite{Lowe:04} based on local image properties, as a result, the keypoint descriptor can be represented relative to this orientation and therefore achieve invariance to image rotation.
+where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of variance $\sigma^2$ and \textit{k} is a constant. In order to detect local maxima and minima of the difference-of-Gaussian function \textit{D(x, y, z, $\sigma$)}, each sample point is compared to its eight neighbors in the current image and nine neighbors in the scale above and below. It is selected only if it is larger than all of these neighbors or smaller than all of them. Once a keypoint candidate has been found by comparing a pixel to its neighbors, the next step is to perform a detailed fit to the nearby data for location, scale, and ratio of principal curvatures of \emph{D}. The principal curvature of D can be computed from the eigenvalues of 2x2 Hessian matrix of \emph{D}. This information allows points to be rejected that have low contrast (and are therefore sensitive to noise) or are poorly localized along an edge. To perform the fit, a 3D quadratic function is fitted to the local sample points in order to determine the interpolated location of the maximum. The approach uses Taylor expansion (up to the quadratic terms) of the scale-space function, \textit{D(x, y, z, $\sigma$)}, shifted so that the origin is at the sample point.
+\begin{equation}
+D(x) = D + \frac{\partial D}{\partial x} x + \frac{1}{2}x^T \frac{\partial^2 D}{\partial x^2} x
+\end{equation}
+where \emph{D} and its derivatives are evaluated at the sample point and $x = (x,y,\sigma)^T$ is the offset from this point. The location of the extremum, $\hat{x}$, is determined by taking the derivative of this function with respect to x and setting it zero, giving
+\begin{equation}
+    \hat{x} = -{\frac{\partial^2 D}{\partial x^2}}^{-1} \frac{\partial D}{\partial x}.
+\end{equation}
+
+Each keypoint is also assigned a consistent orientation \cite{Lowe:04} based on local image properties; as a result, the keypoint descriptor can be represented relative to this orientation and therefore achieve invariance to image rotation.
+
+Thus, each keypoint is now assigned an image location, scale and orientation. These parameters impose a repeatable local 3D coordinate system in which to describe a local image region, and therefore provide invariance to these parameters. The next step computes a descriptor for the local image region that is highly distinctive yet is as invariant as possible to remaining variations. Lowe et al \cite{Lowe:04} use the local image descriptor computation described by Edelman et al \cite{Edelman97} and the details of it are omitted in this report for brevity. Further, image-to-image matching proceeds by computing nearest neighbors between features (location, scale, orientation etc) extracted in different images, based on the weighted Euclidean distances of local image descriptors. Note that due to spatial feature normalization, nearest neighbors can be computed despite arbitrary global similarity image transforms (i.e., translation, rotation and isotropic scaling). Finally, the Hough transform is applied to determine a set of correspondences that are inliers of a robust image-to-image similarity transform.
+
+\subsection{Registration}
+\label{subsec:registration}
+Due to the large variation between the normal control and the subject with enlarged ventricles, a large deformation field is needed to register these images. Registration failed with the standard registration algorithms, including B-spline-based (fnirt in FSL package), fluid-based (fWarp in FSL), Demons (BRAINSDemonWarp in BRAINS) and also full tensor registration method DTITK within the DTI-Toolkit package. All the above methods failed to provide the large deformation required to register these images, particularly in the regions around the enlarged ventricles (figure \ref{fig:corr}).
 
 \begin{figure}
     \centering
@@ -183,21 +189,14 @@ where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of v
     \caption{The figure shows the normal control FA map, the Krabbe subject FA map with the registration result with Demons, DTITK and our proposed method.}
 \end{figure}
 
-Thus, each keypoint is now assigned an image location, scale and orientation. These parameters impose a repeatable local 3D coordinate system in which to describe a local image region, and therefore provide invariance to these parameters. The next step computes a descriptor for the local image region that is highly distinctive yet is as invariant as possible to remaining variations. Lowe et al \cite{Lowe:04} use the local image descriptor computation described by Edelman et al \cite{Edelman97} and the details of it are omitted in this report for brevity. Further, image-to-image matching proceeds by computing nearest neighbors between features (location, scale, orientation etc) extracted in different images, based on the Euclidean distances of local image descriptors. Note that due to spatial feature normalization, nearest neighbors can be computed despite arbitrary global similarity image transforms (i.e. translation, rotation and isotropic scaling). Finally, the Hough transform is applied to determine a set of correspondences that are inliers of a robust image-to-image similarity transform.
-
-\subsection{Registration}
-\label{subsec:registration}
-
-Due to the large variation between the normal control and the subject with enlarged ventricles, a large deformation field is needed to register these images. Registration failed with the standard registration algorithms, including B-spline-based (fnirt in FSL package), fluid-based (fWarp in FSL), Demons (BRAINSDemonWarp in BRAINS) and also full tensor registration method DTITK within the DTI-Toolkit package. All the above methods failed to provide the large deformation required to register these images, particularly in the regions around the enlarged ventricles (figure \ref{fig:corr}).
-
-In our method, To determine the large local deformation field, we first compute the landmark correspondences described in Section \ref{subsec:Correspondence}. These landmarks are then employed in a landmark-based image registration method provided by the plastimatch toolkit \cite{Sharp10}. The landmark-based registration internally uses non-truncated Gaussian radial basis function (RBF) to make local registrations and generates a deformation field by solving a system of linear equations which is computationally very efficient as compared with algorithms based on complex multidimensional minimization. Also, an independent regularization parameter is defined to control the balance between the fidelity of the alignment of landmark pairs and smoothness of the deformation field. The computed landmarks are in general well distributed over the image and hence have the capability to estimate a global deformation field from these  local landmarks. A Gaussian RBF decreases with growing distance from the landmark and the RBF asymptotically approaches zero. This property gives the desired advantage of decreasing global influence with higher distance from the landmarks. While we selected a straightforward landmark-based deformation field generation in this work, there is a lot of ongoing research in generating deformation fields from landmark points that potentially can improve the performance of our proposed registration approach. Once the deformation field is obtained, this field is used to initialize an automatic deformable registration method like diffeomorphic Demons registration on intensity normalized FA images. The results of the combined fields, namely the point landmark deformation field and the Demons deformation field on the FA images are presented in the next section.
+In our method, to determine the large local deformation field, we first compute the landmark correspondences described in Section \ref{subsec:Correspondence}. These landmarks are then employed in a landmark-based image registration method provided by the plastimatch toolkit \cite{Sharp10}. The landmark-based registration internally uses a non-truncated Gaussian radial basis function (RBF) to make local registrations by adjusting the RBF support and generates a deformation field by solving a system of linear equations that is computationally very efficient as compared with algorithms based on complex multidimensional minimization. Also, an independent regularization parameter is defined to control the balance between the fidelity of the alignment of landmark pairs and smoothness of the deformation field. The computed landmarks are in general well distributed over the image and hence have the capability to estimate a global deformation field from these  local landmarks. A Gaussian RBF decreases with growing distance from the landmark and the RBF asymptotically approaches zero. This property gives the desired advantage of decreasing global influence with higher distance from the landmarks. While we selected a straightforward landmark-based deformation field generation in this work, there is a lot of ongoing research in generating deformation fields from landmark points that potentially can improve the performance of our proposed registration approach. Once the deformation field is obtained, this field is used to initialize an automatic deformable registration method like diffeomorphic Demons registration on intensity normalized FA images. The results of the combined fields, namely the point landmark deformation field and the Demons deformation field on the FA images are presented in the next section.
 
 \section{RESULTS}
 Using the DWI volumes for the subject and the normal control, we generate the feature maps, as described in Section \ref{subsec:FeatureMap}. Figure \ref{fig:featureMap} shows the image representing the fiber segments per voxel, the normalized entropy and the combined final map. In the image representing the fiber segments per voxel,  high intensity regions are expected and observed in regions of single fiber tracts and crossing fibers, as both capture a large proportion of fiber segments. In the entropy image, the higher intensities are observed in regions of dispersed fiber tracts (e.g., close to gray matter) and crossing fiber tracts (due to greater variation in fiber orientations) and lower intensities in unidirectional single fiber tracts (or in regions with lack of fiber tracts). The combination of  these two features produces an image in which lower intensities are observed in the unidirectional single fiber locations and higher intensities in crossing fiber locations. Furthermore, locations close to or in gray matter also display very low intensities in the combined map.  In comparison, FA maps cannot successfully highlight crossing fiber locations as these often have similar intensities as WM regions close to gray matter.
 
-The combined feature map images for the subject and the normal control are then used as an input to determine the point landmark correspondence. The point correspondences are used as inputs to the landmark-based registration method (employs Gaussian RBF internally) to determine the initial deformation field. This deformation field is used to initialize the Demons algorithm applied on the subject and the normal control FA images. Figure 5 shows the FA images of the Krabbe case and the normal control and shows the results of Demons, DTITK and our proposed method. Clearly, Demons and DTITK fail to produce the required deformation to push the corticospinal and the internal capsule tracts towards the necessary locations in the pathological subject. Also, the figure shows the overlap of the target and image registered with our method to show the performance of our method. The regions in orange indicate the WM fiber tracts that are aligned successfully. From this overlap figure, a considerable success in registration is obtained for the major tracts - the genu, splenium and the internal capsule tracts.
+The combined feature map images for the subject and the normal control are then used as an input to determine the point landmark correspondence. The point correspondences are used as inputs to the landmark-based registration method (employing a Gaussian RBF internally) to determine the initial deformation field. This deformation field is used to initialize the Demons algorithm applied on the subject and the normal control FA images. Figure 5 shows the FA images of the Krabbe case and the normal control and shows the results of Demons, DTITK and our proposed method. Clearly, Demons and DTITK fail to produce the required deformation to push the corticospinal and the internal capsule tracts towards the necessary locations in the pathological subject. Also, the figure shows the overlap of the target and image registered with our method to show the performance of our method. The regions in orange indicate the WM fiber tracts that are aligned successfully. From this overlap figure, a considerable success in registration is obtained for the major tracts - the genu, splenium and the internal capsule tracts.
 
-To evaluate the registration, we use average regional matching criterion that is tailored to atlas-based analysis methods. The orientation agreement between the principal eigenvectors of the source $e_{source}$ and the target $e_{target}$ weighted with the FA value of the target of each voxel of a particular region is the basis of this criterion. Regions of interest (ROI) on the Krabbe subject are defined representing major fiber tracts. For a ROI $r$, the average regional matching criterion is defined as: 
+To evaluate the registration, we use average regional matching criterion that is tailored to atlas-based analysis methods. The orientation agreement between the principal eigenvectors of the source $e_{source}$ and the target $e_{target}$ weighted with the FA value of the target of each voxel of a particular region is the basis of this criterion. Regions of interest (ROI) on the Krabbe subject are defined representing major fiber tracts. For a ROI $r$, the average regional matching criterion is defined as below: 
 \begin{equation}
 RegMatch_{r} = \frac{1}{N_{r}} \sum_{i=1}^{N_{r}} |e_{source}.e_{target}|.FA_{target}. N_{r}
 \end{equation}
