--- a/comp992/paper/comp992.tex
+++ b/comp992/paper/comp992.tex
@@ -141,7 +141,7 @@ The above formulation is designed to highlight crossing fiber landmarks (see Fig
 
 \subsection{Landmarks with correspondence on feature maps}
 \label{subsec:Correspondence}
-Deformable intensity-based image registration methods employ local optimization methods that are largely driven by distinctive image structure, e.g., corners or landmarks, and must be correctly initialized in order to ensure convergence to correct solutions. Here, we achieve initialization from a set of robust image-to-image correspondences obtained via a 3D version of the scale-invariant feature transform (SIFT) matching technique of Lowe et al~\cite{Lowe:04}. The first stage of this technique is scale-space extrema detection which identifies locations that are invariant to scale change of the image by searching for stable features across all possible scales, using a continuous function of scale known as scale space. The scale space of an image is defined as the function, \textit{L(x, y, z, $\sigma$)}, that is produced from the convolution of a variable-scale Gaussian, \textit{G(x, y, z, $\sigma$)}, with an input image, \textit{I(x, y, z)} as below:
+Deformable intensity-based image registration methods employ local optimization methods that are largely driven by distinctive image structure, e.g., corners or landmarks, and must be correctly initialized in order to ensure convergence to correct solutions. Here, we achieve initialization from a set of robust image-to-image correspondences obtained via a 3D version of the scale-invariant feature transform (SIFT) matching technique of Lowe et al~\cite{Lowe:04}. The first stage of this technique is scale-space extrema detection which identifies locations that are invariant to scale change of the image by searching for stable features across all possible scales, using a continuous function of scale known as scale space. The scale space of an image is defined as the function, \textit{L(x, y, z, $\sigma$)} that is produced from the convolution of a variable-scale Gaussian, \textit{G(x, y, z, $\sigma$)}, with an input image, \textit{I(x, y, z)} as below:
 \begin{equation}
     L(x, y, z, \sigma) = G(x, y, z, \sigma) * I(x, y, z),
 \end{equation}
@@ -152,13 +152,13 @@ In order to detect stable keypoint locations in space, Lowe et al \cite{Lowe:04}
     D(x,y,z,\sigma) &= (G(x,y,z,k\sigma) - G(x,y,z,\sigma)) * I(x,y,z) \\
                     &= L(x, y, z, k\sigma) - L(x, y, z, \sigma) \nonumber
 \end{align}
-where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of variance $\sigma^2$ and \textit{k} is a constant. In order to detect local maxima and minima of the difference-of-Gaussian function \textit{D(x, y, z, $\sigma$)}, each sample point is compared to its eight neighbors in the current image and nine neighbors in the scale above and below. It is selected only if it is larger than all of these neighbors or smaller than all of them. Once a keypoint candidate has been found by comparing a pixel to its neighbors, the next step is to perform a detailed fit to the nearby data for location, scale, and ratio of principal curvatures of \emph{D}. The principal curvature of D can be computed from the eigenvalues of 2x2 Hessian matrix of \emph{D}. This information allows points to be rejected that have low contrast (and are therefore sensitive to noise) or are poorly localized along an edge. To perform the fit, a 3D quadratic function is fitted to the local sample points in order to determine the interpolated location of the maximum. The approach uses Taylor expansion (up to the quadratic terms) of the scale-space function, \textit{D(x, y, z, $\sigma$)}, shifted so that the origin is at the sample point.
+where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of variance $\sigma^2$ and \textit{k} is a constant. In order to detect local maxima and minima of the difference-of-Gaussian function \textit{D(x, y, z, $\sigma$)}, each sample point is compared to its eight neighbors in the current image and nine neighbors in the scale above and below. It is selected only if it is larger than all of these neighbors or smaller than all of them. Once a keypoint candidate has been found by comparing a pixel to its neighbors, the next step is to perform a detailed fit to the nearby data for location, scale, and ratio of principal second derivatives of \emph{D}. The principal second derivatives of \emph{D} can be computed as the eigenvalues of 3x3 Hessian matrix of \emph{D}. This information allows points to be rejected that have low contrast (and are therefore sensitive to noise) or are poorly localized along an edge. To perform the fit, a 3D quadratic function is fitted to the local sample points in order to determine the interpolated location of the maximum. The approach uses Taylor expansion (up to the quadratic terms) of the scale-space function, \textit{D(x, y, z, $\sigma$)}, shifted so that the origin is at the sample point.
 \begin{equation}
-D(x) = D + \frac{\partial D}{\partial x} x + \frac{1}{2}x^T \frac{\partial^2 D}{\partial x^2} x
+    D(\underline{\mathbf{x}}) = D(\underline{\mathbf{x}}_0) + \nabla D (\underline{\mathbf{x}} - \underline{\mathbf{x}}_0) + \frac{1}{2} (\underline{\mathbf{x}} - \underline{\mathbf{x}}_0)^T \nabla^2 D (\underline{\mathbf{x}} - \underline{\mathbf{x}}_0) 
 \end{equation}
-where \emph{D} and its derivatives are evaluated at the sample point and $x = (x,y,\sigma)^T$ is the offset from this point. The location of the extremum, $\hat{x}$, is determined by taking the derivative of this function with respect to x and setting it zero, giving
+where \emph{D} and its derivatives are evaluated at the sample point and $(\underline{\mathbf{x}} - \underline{\mathbf{x}}_0)$ is the offset from this point. The location of the extremum, $\underline{\hat{\mathbf{x}}}$ is determined by taking the derivative of this function with respect to $\underline{\mathbf{x}}$ and setting it zero, giving
 \begin{equation}
-    \hat{x} = -{\frac{\partial^2 D}{\partial x^2}}^{-1} \frac{\partial D}{\partial x}.
+    \underline{\hat{\mathbf{x}}} = \underline{\mathbf{x}}_0 - (\nabla^2 D)^{-1} \hspace{1mm} \nabla D
 \end{equation}
 
 Each keypoint is also assigned a consistent orientation \cite{Lowe:04} based on local image properties; as a result, the keypoint descriptor can be represented relative to this orientation and therefore achieve invariance to image rotation.
